Fixed images not showing

--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -1,14 +1,14 @@
 .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("https://media.discordapp.net/attachments/730694545007968306/1285289360383807562/Coverphoto.jpg?ex=66ebb4bf&is=66ea633f&hm=77794b823eeadc7e45c87e19f5421db9a44b1cadc0c738beb42181fdc15b7e81&=&format=webp&width=877&height=585");
+    background-image: url("/app/assets/dchero.jpg");
     min-height: 100%;
 }
 
 .bgimg-2 {
     background-position: center;
     background-size: cover;
-    background-image: url("https://costogenic.com/wp-content/uploads/2024/06/pexels-vicente-vidal-1397490-2697050.jpg");
+    background-image: url("/app/assets/highrise.jpeg");
     min-height: 100%;
 }
   
